// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LastVisited /> Should render LastVisited component 1`] = `
<div>
  <div>
    <h3
      class="guided-answer__home-grid__section__title"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 16 16"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M13.507 12.324a7 7 0 0 0 .065-8.56A7 7 0 0 0 2 4.393V2H1v3.5l.5.5H5V5H2.811a6.008 6.008 0 1 1-.135 5.77l-.887.462a7 7 0 0 0 11.718 1.092zm-3.361-.97l.708-.707L8 7.792V4H7v4l.146.354 3 3z"
          fill-rule="evenodd"
        />
      </svg>
      <span>
        Last visited
      </span>
    </h3>
    <div
      class="ms-FocusZone css-101"
      data-focuszone-id="FocusZone0"
    >
      <ul
        class="guided-answer__home-grid__section__list"
        role="listbox"
      >
        <li
          class="guided-answer__last-visited"
        >
          <a
            id="last-visited-link"
            tabindex="0"
          >
            Bookmark 2 Title
          </a>
          <div
            class="bottom-section"
            id="bottom-section"
          >
            <div
              class="component-and-product-container"
              style="margin-top: 0px;"
            >
              <div
                class="guided-answer__tree__product"
                id="product-container"
              >
                <span
                  class="bottom-title"
                >
                  Product: 
                </span>
                Product 1
              </div>
              <div
                class="guided-answer__tree__component"
                id="component-container"
              >
                <span
                  class="bottom-title"
                >
                  Component: 
                </span>
                Component 1
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<LastVisited /> Should render LastVisited component with no data 1`] = `
<div>
  <div>
    <h3
      class="guided-answer__home-grid__section__title"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 16 16"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M13.507 12.324a7 7 0 0 0 .065-8.56A7 7 0 0 0 2 4.393V2H1v3.5l.5.5H5V5H2.811a6.008 6.008 0 1 1-.135 5.77l-.887.462a7 7 0 0 0 11.718 1.092zm-3.361-.97l.708-.707L8 7.792V4H7v4l.146.354 3 3z"
          fill-rule="evenodd"
        />
      </svg>
      <span>
        Last visited
      </span>
    </h3>
    <div
      class="ms-FocusZone css-101"
      data-focuszone-id="FocusZone1"
    >
      <ul
        class="guided-answer__home-grid__section__list"
        role="listbox"
      />
    </div>
  </div>
</div>
`;
